[tool.poetry]
name = "myinsightface"
version = "0.1.0"
description = ""
authors = ["amata baba"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.4"
opencv-python = "^4.5.4"
insightface = "^0.5"
onnxruntime = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
